--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 
     <!---bootstrap-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!--custom css-->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
 
         <!--navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -25,13 +28,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">bags</a>
+                    <a class="nav-link" href="#bags">bags</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">backpacks</a>
+                    <a class="nav-link" href="#shoes">shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">subcribe</a>
+                    <a class="nav-link" href="#subscribe">subcribe</a>
                   </li>
                 </ul>
               </div>
@@ -39,11 +42,11 @@
           </nav>
 
         <!--image slider-->
-         <section class="container">
+         <section class="container ">
             <div id="carouselExampleControls" class="carousel slide"  data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row bg-success ps-5 d-flex align-items-center">
+                        <div class="row bg-success ps-5 d-flex align-items-center rounded-3">
                             <div class="col-lg-7">
                                 <h1 class="fw-bold">COOL DUDE HEADPHONE</h1>
                                 <P class="text-white">This is the best headphone in the world for people who just want to waste time in front of funky world.</P>
@@ -58,7 +61,7 @@
                     </div>
                     <div class="carousel-item">
 
-                        <div class="row bg-success ps-5 d-flex align-items-center">
+                        <div class="row bg-success ps-5 d-flex align-items-center rounded-3">
                             <div class="col-lg-7">
                                 <h1 class="fw-bold">MEGA LCD TV for Sports</h1>
                                 <P class="text-white">This is the best headphone in the world for people who just want to waste time in front of funky world.</P>
@@ -71,7 +74,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-success ps-5 d-flex align-items-center">
+                        <div class="row bg-success ps-5 d-flex align-items-center rounded-3">
                             <div class="col-lg-7">
                                 <h1 class="fw-bold">X-box for your living room</h1>
                                 <P class="text-white">This is the best headphone in the world for people who just want to waste time in front of funky world.</P>
@@ -116,7 +119,7 @@
                 </div>
         </section>
         <!---items section-->
-        <section class="container mt-5">
+        <section class="container mt-5" id="shoes">
           <h1>Shoes</h1>
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -163,7 +166,7 @@
           </div>
         </section>
         <!--backpacks items-->
-        <section class="container my-5">
+        <section class="container my-5" id="bags">
           <h1>Bagpack</h1>
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -209,11 +212,12 @@
             </div>
           </div>
         </section>
-        <section class="container d-flex justify-content-center align-items-center my-5 ">
+        <!--subscribe-->
+        <section class="container d-flex justify-content-center align-items-center my-5 panda-bg-color rounded-3 " id="subscribe">
           <div>
-            <h1 class="fw-bold">LET'S STAY IN TOUCH</h1>
+            <h2 class="fw-bold">LET'S STAY IN TOUCH</h2>
           <p>Get updates on sales, specials and more</p>
-          <input type="email" placeholder="your email">
+          <input class="form-control" type="email" placeholder="your email">
           <br> <br>
           <button class="btn btn-success ps-3 pe-3">submit</button>
           </div>
