--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <div class="btn btn-warning ps-3 rounded-pill pe-3 fw-bold">BUY NOW</div>
                             </div>
                             <div class="col-lg-5">
-                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100 h-80" alt="...">
                             </div>
                         </div>
                      
@@ -213,11 +213,7 @@
           </div>
         </section>
         <!--subscribe-->
-        <section class="container d-flex justify-content-center align-items-center my-5 panda-bg-color rounded-3 " id="subscribe">
-          <div>
-            <h2 class="fw-bold">LET'S STAY IN TOUCH</h2>
-          <p>Get updates on sales, specials and more</p>
-          <input class="form-control" type="email" placeholder="your email">
+        <section class="container d-flex justify-content-center align-items-center my-5 panda-bg-color rounded-3 " id="subscribe"> email">
           <br> <br>
           <button class="btn btn-success ps-3 pe-3">submit</button>
           </div>
@@ -229,3 +225,7 @@
     <script src="css/bootstrap.bundle.js"></script>
 </body>
 </html>
+          <div>
+            <h2 class="fw-bold">LET'S STAY IN TOUCH</h2>
+          <p>Get updates on sales, specials and more</p>
+          <input class="form-control" type="email" placeholder="your
